Added a gradiant and functionality to the arrow

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>r/cshighschoolers</title>
   </head>
-  <body>
+  <body style="">
     <noscript>
       <strong>turn on javascript nerd</strong>
     </noscript>
