--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="" style="scroll-behavior: smooth;">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>r/cshighschoolers</title>
   </head>
-  <body style="">
+  <body>
     <noscript>
       <strong>turn on javascript nerd</strong>
     </noscript>
